# SpaceInvadersASS

./: .gitignore  Makefile  README.md  run.sh  settings.toml  setup_project.sh
assets/: .gitkeep
include/: difficulty.h  game.inc  input_time.h  menu.h  rust_bindings.h  sprite_colors.h
include/controllers/: game.inc
include/models/: game_state.h  powerups.h
include/views/: sprites.h
rust_core/: Cargo.toml
rust_core/src/: ai.rs  audio.rs  config.rs  lib.rs  persistence.rs
src/: enemies.asm  game_state.c  main.asm  physics.asm  player.asm  sprite_colors.c  ui.asm  video.asm
src/controllers/: input.asm  input_time.c  main.asm
src/models/: boss.c  difficulty.c  enemies.asm  physics.asm  player.asm  powerups.c
src/views/: menu.c  sprite_colors.c  sprites.c  video.asm
